# NVCapSimple-Linux

./: CMakeLists.txt  Capture.cpp  Capture.h  CommandParser.h  FrameConverter.h  History.txt  License  README  README.md  UVCManager_Min.cpp  UVCManager_Min.h  V4LCapture_Min.cpp  V4LCapture_Min.h  install_manifest.txt  main.cpp  main.h
